finish INSERT and UPDATE
